// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render Header with naviagtion if logged in 1`] = `
<div>
  <h1>
    Callie's Journal
  </h1>
  <div>
    <Link
      to="/view"
    >
      View Entries
    </Link>
    <Link
      to="/add"
    >
      Add Entry
    </Link>
    <p>
      Sign out
    </p>
  </div>
</div>
`;

exports[`should render Header without navigation if not logged in 1`] = `
<div>
  <h1>
    Callie's Journal
  </h1>
</div>
`;
